users/profile/artifacts/kubernetes/06_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile
  namespace: ship-krew-backend
  labels:
    app: users
    module: profile
    project: ship-krew
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
      module: profile
      project: ship-krew
  template:
    metadata:
      labels:
        app: users
        module: profile
        project: ship-krew
    spec:
      containers:
      - name: profile
        image: ghcr.io/asimpleidea/ship-krew-users-profile:v0.4.5
        imagePullPolicy: Always
        args:
        - "--verbosity=$(VERBOSITY)"
        - "--users-api-address=$(USERS_API_ADDRESS)"
        - "--timeout=$(TIMEOUT)"
        - "--views-directory=$(VIEWS_DIRECTORY)"
        volumeMounts:
        - mountPath: /views
          name: views
        securityContext:
          runAsNonRoot: true
          runAsUser: 65532
      volumes:
      - name: views
        persistentVolumeClaim:
          claimName: users-profile-views
